load("@mypy_integration//:rules.bzl", "mypy_stubs")
load("//bazel:api.bzl", "copy_files")

copy_files(
    name = "_mlir_stubs",
    srcs = ["@llvm-project//mlir/python:IRPyIFiles"],
    outs = [
        "__init__.pyi",
        "ir.pyi",
    ],
)

mypy_stubs(
    name = "_mlir",
    srcs = [":_mlir_stubs"],
    visibility = ["//visibility:public"],
)
