load("//bazel:api.bzl", "mojo_library")

package(default_visibility = ["//visibility:public"])

mojo_library(
    name = "kv_cache",
    srcs = glob(["**/*.mojo"]),
    docs_base_path = "kernels",
    validate_missing_docs = False,
    deps = [
        "@mojo//:layout",
        "@mojo//:stdlib",
    ],
)
