load("//bazel:api.bzl", "mojo_library")

package(default_visibility = ["//visibility:public"])

mojo_library(
    name = "nn",
    srcs = glob(["**/*.mojo"]),
    docs_base_path = "kernels",
    validate_missing_docs = False,
    deps = [
        "@mojo//:_cudnn",
        "@mojo//:_cufft",
        "@mojo//:kv_cache",
        "@mojo//:layout",
        "@mojo//:linalg",
        "@mojo//:quantization",
        "@mojo//:register",
        "@mojo//:stdlib",
        "@mojo//:tensor_internal",
    ],
)
