load("//bazel:api.bzl", "mojo_library")

package(default_visibility = ["//visibility:public"])

mojo_library(
    name = "shmem",
    srcs = glob(["**/*.mojo"]),
    additional_compiler_inputs = ["@libnvshmem//:device"],
    copts = [
        "--bitcode-libs",
        "$(location @libnvshmem//:device)",
    ],
    data = [
        "@libnvshmem//:host",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@mojo//:layout",
        "@mojo//:stdlib",
    ],
)
