load("//bazel:api.bzl", "mojo_library")

package(default_visibility = ["//visibility:public"])

mojo_library(
    name = "shmem",
    srcs = glob(["**/*.mojo"]),
    additional_compiler_inputs = ["@nvshmem_prebuilt//:device"],
    copts = [
        "--bitcode-libs",
        "$(location @nvshmem_prebuilt//:device)",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@mojo//:layout",
        "@mojo//:stdlib",
    ],
)
