load("//bazel:api.bzl", "mojo_library")

package(default_visibility = ["//visibility:public"])

mojo_library(
    name = "testdata",
    testonly = True,
    srcs = glob(["**/*.mojo"]),
    deps = [
        "@mojo//:stdlib",
    ],
)

# Export PTX files as filegroup
filegroup(
    name = "ptx_files",
    srcs = glob(["*.ptx"]),
    visibility = ["//visibility:public"],
)
